feat: api initialized with my-project & my-task feat: add login electron page feat: add projects & tasks view in main win feat: add store feat: add electron-store for persist feat: add tray menu feat: add popup bar feat: .prettierrc added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "skipLibCheck": true,
     "noEmit": true
   },
-  "include": ["src"],
+  "include": ["src", "src/zentao-api", "src/store"],
   "references": [
     { "path": "./tsconfig.node.json" }
   ]
