--- a/package.json
+++ b/package.json
@@ -24,16 +24,35 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@ngneat/elf": "^2.3.1",
+    "@ngneat/elf-entities": "^4.4.4",
+    "@ngneat/elf-persist-state": "^1.1.6",
+    "@types/lodash": "^4.14.192",
     "@vitejs/plugin-vue": "^4.1.0",
-    "electron": "^23.1.1",
+    "ant-design-vue": "^3.2.16",
+    "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
+    "electron-store": "^8.1.0",
+    "querystring": "^0.2.1",
+    "rxjs": "^7.8.0",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.13.11",
+    "vite-plugin-multiple": "^0.2.0",
+    "vite-plugin-static-copy": "^0.13.1",
     "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
+    "@fontsource/work-sans": "^4.5.14",
+    "@windicss/plugin-scrollbar": "^1.2.3",
+    "axios": "^1.3.4",
+    "sass": "^1.60.0",
+    "tailwindcss-themeable": "^1.3.0",
+    "vite-plugin-windicss": "^1.8.10",
+    "windicss": "^3.5.6",
+    "zentao-api": "^0.1.0"
   }
 }
