--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "sass": "^1.60.0",
     "tailwindcss-themeable": "^1.3.0",
     "vite-plugin-windicss": "^1.8.10",
-    "windicss": "^3.5.6",
-    "zentao-api": "^0.1.0"
+    "windicss": "^3.5.6"
   }
 }
