--- a/package.json
+++ b/package.json
@@ -47,9 +47,14 @@
   },
   "dependencies": {
     "@fontsource/work-sans": "^4.5.14",
+    "@types/leveldown": "^4.0.3",
+    "@types/levelup": "^5.1.2",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "axios": "^1.3.4",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "sass": "^1.60.0",
+    "serialize-javascript": "^6.0.1",
     "tailwindcss-themeable": "^1.3.0",
     "vite-plugin-windicss": "^1.8.10",
     "windicss": "^3.5.6"
