--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
     "electron-store": "^8.1.0",
+    "kleur": "^4.1.5",
     "querystring": "^0.2.1",
     "rxjs": "^7.8.0",
     "typescript": "^5.0.2",
@@ -49,6 +50,7 @@
     "@fontsource/work-sans": "^4.5.14",
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.2",
+    "@vueuse/rxjs": "^9.13.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "axios": "^1.3.4",
     "leveldown": "^6.1.1",
