--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,5 +6,5 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", "package.json", "electron","src/api", "electron/main/store.tse.tselectron/main/store.tsstore.ts"]
+  "include": ["vite.config.ts", "package.json", "electron","src/api", "src/store/**.ts", "electron/main/store.tse.tselectron/main/store.tsstore.ts"]
 }
