--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "zentao",
   "version": "2.0.0",
   "main": "dist-electron/main/index.js",
-  "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "description": "Zentao desktop application",
+  "author": "Mohamad Khani<mohamadkhani@gmail.com>, Seraj Haqiqi<haqiqi.seraj@gmail.com>",
   "license": "MIT",
   "private": true,
   "keywords": [
@@ -20,45 +20,48 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder",
-    "preview": "vite preview"
+    "build": "vite build && electron-builder",
+    "preview": "vite preview",
+    "serve": "serve ./dist"
   },
   "devDependencies": {
-    "@ant-design/icons-vue": "^6.1.0",
-    "@ngneat/elf": "^2.3.1",
-    "@ngneat/elf-entities": "^4.4.4",
-    "@ngneat/elf-persist-state": "^1.1.6",
-    "@types/lodash": "^4.14.192",
+    
     "@vitejs/plugin-vue": "^4.1.0",
-    "ant-design-vue": "^3.2.16",
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
     "electron-store": "^8.1.0",
-    "kleur": "^4.1.5",
-    "querystring": "^0.2.1",
-    "rxjs": "^7.8.0",
+    "serve": "^14.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.13.11",
     "vite-plugin-multiple": "^0.2.0",
     "vite-plugin-static-copy": "^0.13.1",
-    "vue": "^3.2.47",
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "@ngneat/elf": "^2.3.1",
+    "@ngneat/elf-entities": "^4.4.4",
+    "@ngneat/elf-persist-state": "^1.1.6",
+    "@types/lodash": "^4.14.192",
+    "ant-design-vue": "^3.2.16",
     "@fontsource/work-sans": "^4.5.14",
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.2",
     "@vueuse/rxjs": "^9.13.0",
+    "kleur": "^4.1.5",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "axios": "^1.3.4",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
+    "rxjs": "^7.8.0",
     "sass": "^1.60.0",
     "serialize-javascript": "^6.0.1",
+    "querystring": "^0.2.1",
     "tailwindcss-themeable": "^1.3.0",
     "vite-plugin-windicss": "^1.8.10",
+    "vue": "^3.2.47",
     "windicss": "^3.5.6"
   }
 }
