--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "serve": "serve ./dist"
   },
   "devDependencies": {
-    
     "@vitejs/plugin-vue": "^4.1.0",
     "electron": "^23.2.0",
     "electron-builder": "^23.6.0",
@@ -41,24 +40,26 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@fontsource/work-sans": "^4.5.14",
     "@ngneat/elf": "^2.3.1",
     "@ngneat/elf-entities": "^4.4.4",
     "@ngneat/elf-persist-state": "^1.1.6",
-    "@types/lodash": "^4.14.192",
-    "ant-design-vue": "^3.2.16",
-    "@fontsource/work-sans": "^4.5.14",
+    "@types/dateformat": "^5.0.0",
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.2",
+    "@types/lodash": "^4.14.192",
     "@vueuse/rxjs": "^9.13.0",
-    "kleur": "^4.1.5",
     "@windicss/plugin-scrollbar": "^1.2.3",
+    "ant-design-vue": "^3.2.16",
     "axios": "^1.3.4",
+    "dateformat": "^5.0.3",
+    "kleur": "^4.1.5",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
+    "querystring": "^0.2.1",
     "rxjs": "^7.8.0",
     "sass": "^1.60.0",
     "serialize-javascript": "^6.0.1",
-    "querystring": "^0.2.1",
     "tailwindcss-themeable": "^1.3.0",
     "vite-plugin-windicss": "^1.8.10",
     "vue": "^3.2.47",
