--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-store": "^8.1.0",
     "serve": "^14.2.0",
     "typescript": "^5.0.2",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.1",
     "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.13.11",
@@ -48,15 +49,19 @@
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.2",
     "@types/lodash": "^4.14.192",
+    "@types/moment": "^2.13.0",
     "@vueuse/rxjs": "^9.13.0",
     "@windicss/plugin-scrollbar": "^1.2.3",
     "ant-design-vue": "^3.2.16",
     "axios": "^1.3.4",
+    "date-format": "^4.0.14",
     "dateformat": "^5.0.3",
+    "dayjs": "^1.11.7",
     "electron-form-dialog": "^0.0.3-dev",
     "kleur": "^4.1.5",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
+    "moment": "^2.29.4",
     "querystring": "^0.2.1",
     "rxjs": "^7.8.0",
     "sass": "^1.60.0",
